src/other/mico-2.3.12/test/idl/error/case16.idl

/*
 * Constant definition is not a typedef
 */

const long c1 = 1;
const c1 c2 = 2;
